--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.1.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.lvbo.learn</groupId>
+	<groupId>io.github.lvbo</groupId>
 	<artifactId>learn-lombok</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>learn-lombok</name>
